2010-12-22  Dai Mikurube  <dmikurube@google.com>

        Reviewed by Kent Tamura.

        Assertion failure with <select multiple required>
        https://bugs.webkit.org/show_bug.cgi?id=51260

        * fast/forms/resources/select-live-pseudo-selectors.js:
        * fast/forms/select-live-pseudo-selectors-expected.txt:

2010-12-21  Gavin Barraclough  <barraclough@apple.com>

        Reviewed by Oliver Hunt.

        Bug 26276 - Need a mechanism to determine stack extent

        Correctly measuring available stack increases the size of expression we can handle!

        * fast/js/large-expressions-expected.txt:
        * fast/js/script-tests/large-expressions.js:

2010-12-21  Dan Bernstein  <mitz@apple.com>

        Reviewed by Sam Weinig.

        <rdar://problem/8668230> REGRESSION (r71884): Returning alternate requests from willSendRequest can prevent other requests from ever being sent
        https://bugs.webkit.org/show_bug.cgi?id=51413

        * platform/mac/security/block-test-expected.txt: Reverted r71884.

2010-12-21  Benjamin Kalman  <kalman@chromium.org>

        Reviewed by Darin Adler.

        Shift-End does not select to the end of the line
        https://bugs.webkit.org/show_bug.cgi?id=50610

        Add regression test that shift-end selects to the end of the line for both LTR and RTL text.
        Rebaseline a test which assumed incorrect behaviour of shift-end not selecting to the end of
        the line, but rather moving cursor to the start of the line above.

        * editing/selection/extend-selection-home-end-expected.txt: New baseline.
        * editing/selection/extend-to-line-boundary-expected.txt: Added.
        * editing/selection/extend-to-line-boundary.html: Added.
        * platform/win/editing/selection/extend-selection-home-end-expected.txt: New baseline.

2010-12-21  Jan Erik Hanssen  <jhanssen@sencha.com>

        Reviewed by Simon Fraser.

        matrix3d() must take the zoom factor into account