@@ -281,7 +281,7 @@ Covered API methods:
 /* An inline stylesheet */
 body.mainpage {
     text-decoration: none; /* at least one valid property is necessary for WebCore to match a rule */
-    badproperty: 1badvalue1;
+    ;badproperty: 1badvalue1;
 }
 
 body.mainpage {
